stop images from stretching

--- a/src/styles/components/_LineItemRow.scss
+++ b/src/styles/components/_LineItemRow.scss
@@ -1,6 +1,5 @@
 .LineItemRow {
   &__image {
-    height: 3.5rem;
     width: 3.5rem;
   }
 
